[package]
name = "bevy_time_runner"
description = "General timing system for the Bevy game engine"
version = "0.2.0"
edition = "2021"
authors = [ "Multirious" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Multirious/bevy_time_runner"
homepage = "https://github.com/Multirious/bevy_time_runner"
readme = "README.md"
keywords = [ "bevy", "time" , "timer"]
categories = [ "game-development" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_hierarchy = { version = "0.14.0" }
bevy_time = { version = "0.14.0", default-features = false }
bevy_ecs = { version = "0.14.0", default-features = false }
bevy_app = { version = "0.14.0", default-features = false, optional = true }
bevy_reflect = { version = "0.14.0", default-features = false, optional = true }
bevy_eventlistener = { version = "0.8.0", optional = true }

[features]
default = [
  "bevy_eventlistener",
  "bevy_reflect",
  "bevy_app"
  ]
bevy_reflect = [ "dep:bevy_reflect"]
bevy_app = [ "dep:bevy_app"]

# Add entity-targeted events with bevy_eventlistener
bevy_eventlistener = [ "dep:bevy_eventlistener" ]

[dev-dependencies]
bevy = { version = "0.13.0" , default-features = false }

[build-dependencies]
rustc_version = "0.4.0"

