[package]
name = "bevy_time_runner"
description = "General timing system for the Bevy game engine"
version = "0.4.1"
edition = "2024"
authors = [ "Multirious" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Multirious/bevy_time_runner"
homepage = "https://github.com/Multirious/bevy_time_runner"
readme = "README.md"
keywords = [ "bevy", "time" , "timer"]
categories = [ "game-development" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_time = { version = "0.16.0", default-features = false }
bevy_ecs = { version = "0.16.0", default-features = false }
bevy_app = { version = "0.16.0", default-features = false, optional = true }
bevy_reflect = { version = "0.16.0", default-features = false, optional = true }

[features]
default = [
  "bevy_reflect",
  "bevy_app"
]
bevy_reflect = [ "dep:bevy_reflect", "bevy_ecs/bevy_reflect", "bevy_app/bevy_reflect" ]
bevy_app = [ "dep:bevy_app" ]

[dev-dependencies]
bevy = { version = "0.16.0" , default-features = false }

[build-dependencies]
rustc_version = "0.4.0"

